# AI-COPILOT23

./: .env.example  .gitignore  AUDIT_AND_CHANGES_REPORT.md  AUTOMAPPING_FIX_CHANGELOG.md  CHANGELOG_SPRINTS_2_3_RADAR.md  COMMAND_CENTER_CHANGELOG.md  README.md
backend/: .gitignore  Dockerfile  README.md  alembic.ini  business_copilot.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_alert_supersede.py  test_billing.py  test_coverage.py  test_insight_safety.py  test_kpi_engine.py  test_kpi_math.py  test_mapping_accuracy.py  test_mapping_inference.py  test_sample_detection.py
backend/uploads/: 0175c0ea-e659-42de-8c70-1120005e47d4.csv  0a09e651-afb6-4c26-bd9f-f45ba45496fd.xlsx  0e07b081-330a-40d1-9d00-d064279874e1.xlsx  148ea127-6386-4a11-8ec0-a269dadc7046.csv  1fd44792-4d26-4aba-b49a-11d248014516.xlsx  2101e116-0b52-42f8-9142-beecc0841bb8.csv  23cb2510-7e7e-4877-85cb-573d18ceb592.xlsx  2943fd81-5da0-4387-8150-0c6ac666d281.xlsx  2a74a798-8f4e-47b5-a8f7-3b115d643d90.xlsx  36f04dfa-a62e-4862-9556-392739edf15c.csv  3a242b76-9b19-4902-afbc-1bc557d68479.xlsx  5257b3ef-556b-426c-9752-6299a3dd1048.csv  5a3d73de-e158-47a4-aca3-3634f3a5e6ea.xlsx  5aa30a83-81fa-4289-ae9e-06210e5a7648.xlsx  6150c9ab-fbf9-427e-801f-1d7ab2cda5c4.xlsx  6767fa40-0f5b-4d20-bbc0-cc08db93708a.csv  6d931ac3-3f77-44c3-9172-754f218f14b5.xlsx  7b76f15d-db06-42a7-8e11-51dae447335f.csv  87a4a6d9-674b-45bd-b4ef-7f2a1e5e0e3a.xlsx  950de63f-d3fc-4f05-a918-93716f8126d0.xlsx  aceaf229-10cd-4949-8aea-6d24423df7d9.xlsx  (+9 more)
frontend/: .gitignore  (+4 more)
(+315 files in other folders)
